[gd_scene load_steps=21 format=3 uid="uid://w7xu435qumq2"]

[ext_resource type="Texture2D" uid="uid://b1hdv21ho2e82" path="res://Assets/Items/Tiles/Almanac_GroundDay.jpg" id="1_3oqfe"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/GameLevel.gd" id="1_kc6x4"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/GameLevelStateMachine.gd" id="2_psf6h"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Loading.gd" id="3_mspq5"]
[ext_resource type="PackedScene" uid="uid://bskyhs7d56e76" path="res://Scenes/Entities/SeedChooser/SeedChooser.tscn" id="3_uwcln"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Selecting.gd" id="4_62prt"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/SelectionComplete.gd" id="5_sid80"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Playing.gd" id="6_fqrom"]
[ext_resource type="PackedScene" uid="uid://cqkrmdxlwvvqk" path="res://Scenes/Entities/SeedBank/SeedBank.tscn" id="6_vs27q"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Paused.gd" id="7_xj54q"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Victory.gd" id="8_j2j72"]
[ext_resource type="Script" path="res://Scenes/Levels/GameLevel/State/Defeat.gd" id="9_neru4"]
[ext_resource type="AudioStream" uid="uid://caxkpp6gnpcnp" path="res://Assets/Sounds/choose_your_seeds.ogg" id="13_0pjrr"]
[ext_resource type="AudioStream" uid="uid://c875j2nmyyyha" path="res://Assets/Sounds/level_grasswalk.ogg" id="14_2wobg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_duibv"]
texture = ExtResource("1_3oqfe")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_c6pwi"]
tile_size = Vector2i(200, 200)
sources/1 = SubResource("TileSetAtlasSource_duibv")

[sub_resource type="Animation" id="Animation_s2qva"]
resource_name = "Loading"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/SeedBank:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-726, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/SeedChooser:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-560, 132), Vector2(0, 132)]
}

[sub_resource type="Animation" id="Animation_3pxwd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/SeedBank:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-726, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/SeedChooser:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-560, 132)]
}

[sub_resource type="Animation" id="Animation_q4tqu"]
resource_name = "SelectionComplete"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/SeedChooser:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 132), Vector2(-560, 132)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ip5ky"]
_data = {
"Loading": SubResource("Animation_s2qva"),
"RESET": SubResource("Animation_3pxwd"),
"SelectionComplete": SubResource("Animation_q4tqu")
}

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_kc6x4")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("2_psf6h")
start_state = NodePath("Loading")

[node name="Loading" type="Node" parent="StateMachine"]
script = ExtResource("3_mspq5")

[node name="Selecting" type="Node" parent="StateMachine"]
script = ExtResource("4_62prt")

[node name="SelectionComplete" type="Node" parent="StateMachine"]
script = ExtResource("5_sid80")

[node name="Playing" type="Node" parent="StateMachine"]
script = ExtResource("6_fqrom")

[node name="Paused" type="Node" parent="StateMachine"]
script = ExtResource("7_xj54q")

[node name="Victory" type="Node" parent="StateMachine"]
script = ExtResource("8_j2j72")

[node name="Defeat" type="Node" parent="StateMachine"]
script = ExtResource("9_neru4")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="SeedBank" parent="HUD" instance=ExtResource("6_vs27q")]
offset_left = -726.0
offset_right = -726.0
scale = Vector2(0.7, 0.7)

[node name="SeedChooser" parent="HUD" instance=ExtResource("3_uwcln")]
offset_left = -560.0
offset_top = 132.0
offset_right = -520.0
offset_bottom = 172.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_c6pwi")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 0, -65536, 1, 0, -65535, 1, 0, -131071, 1, 0, -131072, 1, 0, -65537, 1, 0, -65538, 1, 0, -65539, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -131076, 1, 0, -131077, 1, 0, -65541, 1, 0, -65540, 1, 0, -4, 1, 0, -5, 1, 0, -3, 1, 0, -2, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 131075, 1, 0, 131074, 1, 0, 131073, 1, 0, 131072, 1, 0, 196607, 1, 0, 196606, 1, 0, 196605, 1, 0, 196604, 1, 0, 196603, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, -65532, 1, 0, -65533, 1, 0, -65534, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -196604, 1, 0, -196605, 1, 0, -196606, 1, 0, -327690, 1, 0, -262154, 1, 0, -196618, 1, 0, -131082, 1, 0, -65546, 1, 0, -10, 1, 0, 65526, 1, 0, 131062, 1, 0, 196598, 1, 0, 262134, 1, 0, 327670, 1, 0, 393206, 1, 0, -327689, 1, 0, -262153, 1, 0, -196617, 1, 0, -131081, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 196599, 1, 0, 262135, 1, 0, 327671, 1, 0, 393207, 1, 0, -327688, 1, 0, -262152, 1, 0, -196616, 1, 0, -131080, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, 131064, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 393208, 1, 0, -327687, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -65543, 1, 0, -7, 1, 0, 65529, 1, 0, 131065, 1, 0, 196601, 1, 0, 262137, 1, 0, 327673, 1, 0, 393209, 1, 0, -327686, 1, 0, -262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, 393210, 1, 0, -327685, 1, 0, -262149, 1, 0, -196613, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, -327684, 1, 0, -262148, 1, 0, -196612, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, -327683, 1, 0, -262147, 1, 0, -196611, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, -327682, 1, 0, -262146, 1, 0, -196610, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, -327681, 1, 0, -262145, 1, 0, -196609, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, -393216, 1, 0, -327680, 1, 0, -262144, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, -393215, 1, 0, -327679, 1, 0, -262143, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, -393214, 1, 0, -327678, 1, 0, -262142, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, -393213, 1, 0, -327677, 1, 0, -262141, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, -393212, 1, 0, -327676, 1, 0, -262140, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, -393211, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, -393210, 1, 0, -327674, 1, 0, -262138, 1, 0, -196602, 1, 0, -131066, 1, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, -393209, 1, 0, -327673, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, -393208, 1, 0, -327672, 1, 0, -262136, 1, 0, -196600, 1, 0, -131064, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, -393207, 1, 0, -327671, 1, 0, -262135, 1, 0, -196599, 1, 0, -131063, 1, 0, -65527, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ip5ky")
}

[node name="SelectingBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_0pjrr")

[node name="LevelGrasswalkBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_2wobg")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/SelectionComplete" method="_on_animation_player_animation_finished"]
